--- a/client/scss/_base.scss
+++ b/client/scss/_base.scss
@@ -1,7 +1,7 @@
 :root {
-  --color-primary: #eb2f64;
-  --color-primary-light: #ff3366;
-  --color-primary-dark: #ba265d;
+  --color-primary: #bbd2c5;
+  --color-primary-light: #536976;
+  --color-primary-dark: #292e49;
 
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
@@ -18,11 +18,11 @@
   --line: 1px solid var(--color-grey-light-2);
 }
 
-$bp-largest: 75em; // 1200px
-$bp-large: 68.75em; // 1100px
-$bp-medium: 56.25em; // 900px
-$bp-small: 37.5em; // 600px
-$bp-smallest: 31.25em; // 500px
+$largest: 75em; // 1200px
+$large: 68.75em; // 1100px
+$medium: 56.25em; // 900px
+$small: 37.5em; // 600px
+$smallest: 31.25em; // 500px
 
 * {
   margin: 0;
@@ -39,7 +39,7 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
 
-  @media only screen and (max-width: $bp-large) {
+  @media only screen and (max-width: $large) {
     font-size: 50%;
   }
 }
@@ -51,11 +51,11 @@ body {
   color: var(--color-grey-dark-2);
   background-image: linear-gradient(
     to right bottom,
+    var(--color-primary),
     var(--color-primary-light),
     var(--color-primary-dark)
   );
   background-size: cover;
   background-repeat: no-repeat;
-
   min-height: 100vh;
 }
