add login and error handling for login

--- a/client/scss/_header.scss
+++ b/client/scss/_header.scss
@@ -23,6 +23,7 @@
       height: 100%;
       width: 100%;
       text-transform: uppercase;
+      letter-spacing: 1px;
       color: var(--color-primary-light);
     }
 
