add signup form, styles for both forms update layout styles

--- a/client/scss/_base.scss
+++ b/client/scss/_base.scss
@@ -2,6 +2,7 @@
   --color-primary: #bbd2c5;
   --color-primary-light: #536976;
   --color-primary-dark: #292e49;
+  --error: #e74c3c;
 
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
