--- a/client/scss/_submitform.scss
+++ b/client/scss/_submitform.scss
@@ -4,8 +4,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  min-height: 20rem;
+  min-height: 35rem;
   width: 100%;
+  border: 1px solid red;
 
   &__title {
     font-size: 3rem;
@@ -57,8 +58,11 @@
     outline: none;
     border: none;
     font-size: 1.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 100px;
     background-color: var(--color-primary-light);
-    box-shadow: var(--shadow-dark);
+    box-shadow: var(--shadow-light);
     color: var(--color-grey-light-2);
     transition: all ease 0.2s;
 
