--- a/client/scss/_layout.scss
+++ b/client/scss/_layout.scss
@@ -13,17 +13,13 @@
 }
 
 .header {
-  font-size: 1.4rem;
-  height: 7rem;
-  background-color: #fff;
-  border-bottom: var(--line);
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   @media only screen and (max-width: $smallest) {
     flex-wrap: wrap;
-    align-content: space-around;
+    // align-content: space-around;
     height: 11rem;
   }
 }
