--- a/client/scss/_submitform.scss
+++ b/client/scss/_submitform.scss
@@ -9,6 +9,7 @@
 
   &__title {
     font-size: 3rem;
+    font-weight: 300;
   }
 
   &__form {
@@ -33,16 +34,16 @@
     font-family: inherit;
     font-size: 1.5rem;
     color: inherit;
-    background-color: #fff;
     border: none;
     padding: 1rem 2rem;
     transition: all 0.2s;
     margin-bottom: 2rem;
+    background-color: var(--color-grey-light-2);
 
     &:focus {
       outline: none;
       width: 100%;
-      background-color: var(--color-grey-light-2);
+      background-color: #fff;
     }
   }
 
@@ -58,8 +59,11 @@
     border: none;
     font-size: 1.5rem;
     font-weight: 300;
+    letter-spacing: 1px;
+    width: 30%;
+    border-radius: 2px;
+    margin: 0 auto;
     text-transform: uppercase;
-    border-radius: 100px;
     background-color: var(--color-primary-light);
     box-shadow: var(--shadow-light);
     color: var(--color-grey-light-2);
