--- a/client/style.scss
+++ b/client/style.scss
@@ -1,4 +1,5 @@
 @import './scss/base';
 @import './scss/layout';
 @import './scss/header';
+@import './scss/locationform';
 @import './scss/submitform';
