--- a/client/scss/_header.scss
+++ b/client/scss/_header.scss
@@ -10,12 +10,15 @@
 
   &__nav {
     align-self: stretch;
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
   }
 
   &__nav-list {
     display: flex;
-    height: 100%;
     align-items: center;
+    height: 100%;
   }
 
   &__nav-list-item {
