--- a/client/scss/_locationform.scss
+++ b/client/scss/_locationform.scss
@@ -1,5 +1,15 @@
 .location {
-  margin-right: 1.5rem;
+  margin-left: 1.5rem;
+  width: 75rem;
+  margin: auto;
+  margin-right: 12rem;
+
+  &__form {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   &__form--input {
     font-family: inherit;
@@ -7,13 +17,12 @@
     color: inherit;
     border: none;
     padding: 1rem 2rem;
+    border-radius: 50px;
     transition: all 0.2s;
     background-color: var(--color-grey-light-2);
-    border: 1px solid var(--color-grey-light-3);
-    width: 90%;
-    margin: auto;
+    border: 1px solid var(--color-grey-dark-2);
+    width: 50%;
     transition: all 0.2s ease;
-    border: 1px solid red;
 
     &:focus {
       outline: none;
