--- a/client/style.scss
+++ b/client/style.scss
@@ -1,5 +1,6 @@
 @import './scss/base';
 @import './scss/layout';
 @import './scss/header';
+@import './scss/home';
 @import './scss/locationform';
 @import './scss/submitform';
