--- a/client/style.scss
+++ b/client/style.scss
@@ -2,5 +2,6 @@
 @import './scss/layout';
 @import './scss/header';
 @import './scss/home';
+@import './scss/dashboard';
 @import './scss/locationform';
 @import './scss/submitform';
