add webpack config for images

--- a/client/scss/_home.scss
+++ b/client/scss/_home.scss
@@ -4,4 +4,8 @@
   align-items: center;
   width: 100%;
   min-height: 50rem;
+  background-image: url('../assets/pexels-photo-458785.jpeg');
+  background-size: cover;
+  background-position: top;
+  position: relative;
 }
