--- a/client/scss/_home.scss
+++ b/client/scss/_home.scss
@@ -4,7 +4,7 @@
   align-items: center;
   width: 100%;
   min-height: 50rem;
-  background-image: url('../assets/pexels-photo-458785.jpeg');
+  background-image: url('assets/pexels-photo-458785.jpeg');
   background-size: cover;
   background-position: top;
   position: relative;
