--- a/client/scss/_dashboard.scss
+++ b/client/scss/_dashboard.scss
@@ -10,7 +10,7 @@
     &-header {
       font-size: 2rem;
       text-align: center;
-      margin-bottom: 2rem;
+      margin-top: 1rem;
     }
 
     &--list {
