--- a/client/scss/_header.scss
+++ b/client/scss/_header.scss
@@ -4,12 +4,21 @@
   background-color: #fff;
   border-bottom: var(--line);
 
+  @media only screen and (max-width: $medium) {
+    height: 16rem;
+  }
+
   &__logo {
     margin-left: 2rem;
   }
 
   &__heading {
     margin-left: 8rem;
+
+    @media only screen and (max-width: $medium) {
+      margin-left: 0;
+      padding: 0 2rem;
+    }
 
     &--text {
       font-size: 4rem;
@@ -29,6 +38,11 @@
     display: flex;
     align-items: center;
     height: 100%;
+
+    @media only screen and (max-width: $medium) {
+      width: 100%;
+      justify-content: space-around;
+    }
   }
 
   &__nav-list-item {
@@ -36,6 +50,11 @@
     display: flex;
     align-self: stretch;
     align-items: center;
+    border: var(--line);
+
+    @media only screen and (max-width: $medium) {
+      width: 100%;
+    }
 
     &--link {
       padding: 0 2rem;
@@ -48,6 +67,10 @@
       letter-spacing: 1px;
       color: var(--color-primary-light);
       transition: all 0.2s ease;
+
+      @media only screen and (max-width: $medium) {
+        text-align: center;
+      }
     }
 
     &--link:hover {
