--- a/client/scss/_submitform.scss
+++ b/client/scss/_submitform.scss
@@ -11,6 +11,10 @@
     margin-bottom: -1rem;
     font-size: 3rem;
     font-weight: 300;
+
+    @media only screen and (max-width: $medium) {
+      font-size: 5rem;
+    }
   }
 
   &__form {
@@ -23,11 +27,11 @@
     }
 
     @media only screen and (max-width: $medium) {
-      width: 60%;
+      width: 70%;
     }
 
     @media only screen and (max-width: $small) {
-      width: 70%;
+      width: 80%;
     }
   }
 
@@ -40,6 +44,10 @@
     transition: all 0.2s;
     margin-bottom: 2rem;
     background-color: var(--color-grey-light-2);
+
+    @media only screen and (max-width: $medium) {
+      font-size: 1.9rem;
+    }
 
     &:focus {
       outline: none;
